banking-app/security-with-istio/access-control/allow-nothing-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: banking-app
spec:
  {}
