banking-app/security-with-istio/access-control/dashboard-viewer-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: dashboard-viewer
  namespace: banking-app
spec:
  selector:
    matchLabels:
      app: dashboard
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
