banking-app/security-with-istio/access-control/profile-viewer-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: profile-viewer
  namespace: banking-app
spec:
  selector:
    matchLabels:
      app: profile
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/banking-app/sa/dashboard"]
    to:
    - operation:
        methods: ["GET"]
